registry_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: registry
    spec:
      containers:
        - resources:
          name: registry
          image: registry:2
          ports:
            - name: registry-port
              containerPort: 5000
          volumeMounts:
            - mountPath: /var/lib/registry
              name: images
            - mountPath: /certs
              name: certs
            - mountPath: /auth
              name: auth
      volumes:
        - name: images
          hostPath:
            path: /home/lucskylab/registry/images
        - name: certs
          hostPath:
            path: /home/lucskylab/registry/certs
        - name: auth
          hostPath:
            path: /home/lucskylab/registry/auth
      nodeSelector:
        node: master
