registry_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    name: registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
  selector:
    name: registry
  type: NodePort
