registry_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - kubia.example.com
      secretName: tls-secret
  rules:
    - host: kubia.example.com
      http:
        paths:
          - path: /kubia
            backend:
              serviceName: kubia-svc
              servicePort: 80
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 5000
